added quiz questions and initial page functionality

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <title>Quiz</title>
   </head>
   <body>
-
-      <script src="./script.js"></script>
-    </section>
+    <script src="./script.js"></script>
+    <script src="./quizScript.js"></script>
   </body>
 </html>
