updated the quiz questions.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <title>Quiz</title>
   </head>
   <body>
+    <div id="quiz"></div>
+    <button id="submit"></button>
+    <div id="results"></div>
+
     <script src="./script.js"></script>
     <script src="./quizScript.js"></script>
   </body>
